@@ -138,3 +138,8 @@ Backwards Incompatibilities (with BFG 1.3.X)
   an exception occurs is now deprecated.  Instead, code which relies on this
   environ value should use the ``exception`` attribute of the request
   (e.g. ``request.exception[0]``) to retrieve the message.
+
+- The values ``bfg_localizer`` and ``bfg_locale_name`` kept on the request
+  during internationalization for caching purposes were never APIs.  These
+  however have changed to ``localizer`` and ``locale_name``, respectively.
+
